# Rim-data-analysis

./: .env.example  .gitignore  AGENTS.md  README.md  RELEASE-v1.0.0.md  USER-GUIDE.txt  pyproject.toml
assets/scenario-libraries/: sample-library.json  shooting-test-library.json
assets/scenarios/: sample-melee-vs-armor.json  sample-ranged-vs-armor.json
desktop/app/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
desktop/app/src/: main.ts  preload.ts  renderer.ts  styles.css
docs/: phase1-combat-analyzer.md  project-roadmap.md  rimworld-data-landscape.md  scenario-library-format.md  session-handoff-2026-05-19.md  task-board.md
scripts/: build-windows-release.ps1  launch_desktop.py  launch_web_api.py
src/rim_data_analysis/: __init__.py  __main__.py  app_services.py  cli.py  combat_constants.py  combat_engine.py  combat_io.py  combat_models.py  desktop_app.py  desktop_app_ui.py  desktop_user_app.py  desktop_user_app_character.py  desktop_user_app_pages.py  desktop_user_app_scenario.py  models.py  paths.py  reporting.py  scanner.py  scenario_library.py  scenario_library_reporting.py  user_app_analysis.py  user_app_catalog.py  user_app_data.py  user_app_models.py  user_app_options.py  user_app_store.py  vanilla_models.py  vanilla_parser.py  vanilla_reporting.py  web_api.py
tests/: test_app_services.py  test_combat_engine.py  test_paths.py  test_scanner.py  test_scenario_library.py  test_user_app_data.py  test_vanilla_parser.py  test_web_api.py
tests/fixtures/steam/: libraryfolders.vdf
计算模型/: 狙击VS靶70-当前公式.md  狙击VS靶70-计算流程.md
(+16 files in other folders)
