[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rim-data-analysis"
version = "0.1.0"
description = "RimWorld and Workshop mod metadata analysis toolkit."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Project Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[project.scripts]
rim-analysis = "rim_data_analysis.cli:main"
rim-analysis-app = "rim_data_analysis.desktop_user_app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
